[package]
name = "reqwest-chain"
version = "1.0.0"
edition = "2021"

authors = ["Tom Milligan <code@tommilligan.net>"]
description = "Apply custom criteria to any reqwest response, deciding when and how to retry."
repository = "https://github.com/tommilligan/reqwest-chain"

license = "MIT"
keywords = ["reqwest", "middleware", "chain", "retry"]
readme = "README.md"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
http = "1.4.0"
reqwest-middleware = { version = "0.5.0" }

[dev-dependencies]
tokio = { version = "1.49.0", features = ["rt", "macros"] }
wiremock = "0.6.5"
